src/test/ui/issues/issue-7013.stderr
error[E0277]: `std::rc::Rc<std::cell::RefCell<A>>` cannot be sent between threads safely
  --> $DIR/issue-7013.rs:26:19
   |
LL |     let a = A {v: box B{v: None} as Box<dyn Foo + Send>};
   |                   ^^^^^^^^^^^^^^ `std::rc::Rc<std::cell::RefCell<A>>` cannot be sent between threads safely
   |
   = help: within `B`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<std::cell::RefCell<A>>`
   = note: required because it appears within the type `std::option::Option<std::rc::Rc<std::cell::RefCell<A>>>`
   = note: required because it appears within the type `B`
   = note: required for the cast to the object type `dyn Foo + std::marker::Send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
